--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="containerLogo">
-        <img src="/img/interroga.png" alt="logo" id="logo">
+        <img src="img/interroga.png" alt="logo" id="logo">
     </div>
     <h1 class="title">Qual a <span>resposta</span>?</h1>
     <div id="container">
