--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p id="pergunta"></p>
         <div id="containerPergunta">
             <form>
-                <input type="text" id="resposta">
+                <input type="text" id="resposta" autofocus autocomplete="off">
             </form>
             <button id="botao">Enviar resposta</button>
         </div>
